--- a/plugin.xml
+++ b/plugin.xml
@@ -43,6 +43,9 @@
         
         
         <framework src="AudioToolbox.framework"/>
+        <framework src="Foundation.framework"/>
+        <framework src="UIKit.framework"/>
+        <framework src="XCTest.framework"/>
     </platform>
     
 
