--- a/plugin.xml
+++ b/plugin.xml
@@ -26,9 +26,9 @@
         <header-file src="src/ios/HLSPlugin.h"/>
         <source-file src="src/ios/HLSPlugin.m"/>
         
-        <!--<source-file src="src/ios/libStreamingKit.a" framework="true" />
+        <source-file src="src/ios/libStreamingKit.a" framework="true" />
         
-        <header-file src="src/ios/NSMutableArray+STKAudioPlayer.h"/>
+        <!--<header-file src="src/ios/NSMutableArray+STKAudioPlayer.h"/>
         <source-file src="src/ios/NSMutableArray+STKAudioPlayer.m"/>
         <header-file src="src/ios/STKAudioPlayer.h"/>
         <source-file src="src/ios/STKAudioPlayer.m"/>
