--- a/plugin.xml
+++ b/plugin.xml
@@ -50,7 +50,7 @@
         
         
         <framework src="AudioToolbox.framework"/>
-        <framework src="Foundation.framework"/>
+        <framework src="CFNetwork.framework"/>
         <framework src="UIKit.framework"/>
     </platform>
     
