--- a/plugin.xml
+++ b/plugin.xml
@@ -11,7 +11,7 @@
     <keywords>HLS</keywords>
 
      <js-module src="www/HLSPlugin.js" name="HLSPlugin">
-        <clobbers target="HLSPlugin" />
+        <clobbers target="window.HLSPlugin" />
     </js-module>
 
 
