--- a/plugin.xml
+++ b/plugin.xml
@@ -4,7 +4,7 @@
     xmlns:rim="http://www.blackberry.com/ns/widgets"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="com.bakata.plugins.HLSPlugin"
-    version="1.0.2">
+    version="1.0.5">
     <name>HLSPlugin</name>
     <description>HLS Player Plugin for RTVC</description>
     <license>Apache 2.0</license>
@@ -48,6 +48,7 @@
         <header-file src="src/ios/SampleQueueId.h"/>
         <source-file src="src/ios/SampleQueueId.m"/>
         
+        <framework src="MediaPlayer.framework"/>
         <framework src="AudioToolbox.framework"/>
         <framework src="CFNetwork.framework"/>
         <framework src="UIKit.framework"/>
